2006-03-24  J. Tang  <tang@jtang.org>

	* pkgIndex.tcl: removed bogus "ControlFrame" entry [bug 1429405]

	* MainFrame man page: fixed some typos on man page

	* mainframe.tcl: fixed status bar placement when it is re-shown
	after a [showstatusbar none] command [bug 1027568]

2006-03-23  J. Tang  <tang@jtang.org>

	* dynhelp.tcl: if a widget's help balloon is being displayed when
	that widget is destroyed, also destroy the associated balloon [bug
	1448424]

	* listbox.tcl: when deleting an item from the ListBox that has
	dynamic help text, also remove its entry from the help array [bug
	1443461]

2006-02-10  J. Tang  <tang@jtang.org>

	* ProgressDlg man page: note that caller must invoke [update], the
	progressbar will not do it automatically [bug 1105778]

	* progressbar.tcl: -maximum value must now be non-zero, else
	divide by 0 occurs [bug 1145523]; use double() calculations to
	prevent integer overflow with very large -maximum values [bug
	900165]

	* PagesManager man page: clarified [add] behavior and default
	state [bug 1305988]

2006-02-08  J. Tang  <tang@jtang.org>

	* combobox.tcl: allow -autocomplete with uppercase chars [bug
	996569]; added -autopost option [patch 1359041]

	* dynamic help man page: added clarification to -variable

2006-01-25  J. Tang  <tang@jtang.org>

	* buttonbox.tcl: fixed -homogeneous calculation [bug 1362899]

2005-11-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* color.tcl (SelectColor::menu): use native dialog for palette
	menu item where possible (and Widget::theme is used).

2005-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* statusbar.tcl: correct Widget::theme typos

2005-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl (MainFrame::configure): need to ignore -bg change
	check when themed.

2005-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* mainframe.tcl (MainFrame::_create_menubar): ignore -bg -bd opts
	when themed

2005-09-22  Jeff Hobbs  <jeffh@ActiveState.com>
