@@ -1,3 +1,8 @@
+2006-06-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* statusbar.tcl (StatusBar::remove): remove neighboring separator
+	when removing the first item. [Bug 1512671]
+
 2006-03-24  J. Tang  <tang@jtang.org>
 
 	* pkgIndex.tcl: removed bogus "ControlFrame" entry [bug 1429405]
